# ASpaceGame

./: Achievement.cpp  Achievement.h  Animator.cpp  Animator.h  Assaulter.cpp  Assaulter.h  Asteroid.cpp  Asteroid.h  AuxiliaryCannon.cpp  AuxiliaryCannon.h  Background.cpp  Background.h  Bomber.cpp  Bomber.h  Boss.cpp  Boss.h  CMakeLists.txt  Cannon.cpp  Cannon.h  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  EnhanceSpecial.cpp  EnhanceSpecial.h  EntityManager.cpp  EntityManager.h  Factory.cpp  Factory.h  Fighter.cpp  Fighter.h  FireRate.cpp  FireRate.h  FullHealth.cpp  FullHealth.h  Functions.cpp  Functions.h  Game.cpp  Game.h  Health.h  (+28 more)
src/: Achievement.cpp  Animator.cpp  Assaulter.cpp  Assaulter.h  Asteroid.h  AuxiliaryCannon.h  Background.cpp  Background.h  Bomber.cpp  CMakeLists.txt  EnhanceSpecial.h  EntityManager.cpp  EntityManager.h  Factory.h  Fighter.cpp  FireRate.cpp  FireRate.h  Functions.cpp  Functions.h  Game.cpp  Game.h  Health.cpp  LaserCannon.cpp  Observer.h  Player.cpp  Player.h  PowerUp.h  Projectile.cpp  Raptor.cpp  Strength.cpp  Strength.h
test/: AsteroidTest.cpp  BackgroundTest.cpp  CMakeLists.txt  EmenyTest.cpp  EntityManagerTest.cpp  GameTest.cpp  PlayerTest.cpp  PowerUpTest.cpp  RunAllTests.cpp
